# hyperflow

./: .env.example  .gitignore  AGENT_WALLET_COMPLIANCE.md  README.md  app.json  dev-server.js  manifest.json  package-lock.json  package.json
bundle/: anna-tool-ids.js  app.js  index.html
client/: index.html
config/: hyperflow.config.json
dev-static/static/anna-apps/_sdk/latest/: index.js
executas/policygate-case-python/: README.md  executa.json  policygate_case_plugin.py  pyproject.toml
executas/policygate-ops/: SKILL.md  executa.json
src/: App.svelte  circle-agent-wallet.ts  config.ts  dashboard.ts  loop.ts  nebius.ts
tests/bundle/: app.spec.ts
