[project]
name = "policygate-case"
version = "1.0.0"
description = "PolicyGate Case — Executa stdio tool plugin for policy-backed approvals"
requires-python = ">=3.10"
authors = [{ name = "PolicyGate" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "anna-executa-test>=0.1.0",
]

[project.scripts]
"policygate-case" = "policygate_case_plugin:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["policygate_case_plugin"]
